Fix overflow of mistakes in signal_info.html

--- a/static/cfd/css/gentelella_style.css
+++ b/static/cfd/css/gentelella_style.css
@@ -93,7 +93,7 @@
 }
 .signal-mistakes {
     color: goldenrod;
-    white-space: pre;
+    white-space: break-spaces;
 }
 .signal-type-buy {
     color:green;
